--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes"> -->
-    <title>Luxottica reps dashboard</title>
+    <title>Typescript boilerplate</title>
   </head>
 
   <body>
